# Page_Writer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  wall while wincmd windo winpos winsize wnext wprevious wq wqall write wshada wundo wviminfo
pages/: view.html
src/: config.js  index.html  main.js  search.js  style.scss  view.html  view.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client_server.rs  config.rs  config.toml  data.db  data.db-shm  data.db-wal  database_sync.rs  lib.rs  main.rs
src-tauri/src/brain_compiler/: mod.rs  preprocess.rs  rake.rs  similarity.rs  sqlite_interface.rs  tf_idf.rs
