[package]
name = "page_writer"
version = "0.1.0"
description = "A note taking app for spontanious note takers."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "page_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio" ] }
dirs = "6.0.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
toml = "0.9.4"
simple-server = "0.4.0"
local-ip-address = "0.6.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
